@@ -1,5 +1,7 @@
 [B]0.9.25[/B]
 VIEWTYPES - Add Square Wall Large
+MYPLAYLIST - Adapt side poster/cover depending on listitem dbtype
+SKINSETTINGS - Move Monochrome flags option to Colors menu
 
 [B]0.9.24[/B]
 LEIA - VIDEOOSD - Subtitles button opens subtitles menu
